syntax = "proto3";

package grpc_service;

option go_package = "./";

import "src/transport/proto/src/users-service/models.proto";

message AuthenticationBasicAuthRequest {
  string Username = 1;
  string Password = 2;
}

message AuthenticationBasicAuthResponse {
  User User = 1;
}

service Authentication {
  rpc BasicAuth(AuthenticationBasicAuthRequest) returns (AuthenticationBasicAuthResponse);
}